[package]
name = "apctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
chrono-english = "0.1.7"
chrono-humanize = "0.2.2"
clap = { version = "4.3.0", features = ["derive"] }
date_time_parser = "0.2.0"
env_logger = "0.10.0"
log = "0.4.17"
prost = "0.11.9"
timewarp = "0.3.1"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"
